--- a/src/theme/_smui-theme.scss
+++ b/src/theme/_smui-theme.scss
@@ -17,6 +17,12 @@ body {
 	color: theme.$on-surface;
 }
 
+.section-header {
+	font-family: Lato;
+	font-size: 20px;
+	letter-spacing: 0.01em;
+}
+
 a {
 	color: #40b3ff;
 }
