--- a/src/theme/_smui-theme.scss
+++ b/src/theme/_smui-theme.scss
@@ -5,7 +5,7 @@
 // Svelte Colors!
 @use '@material/theme/index' as theme with (
 	$primary: #ff3e00,
-	$secondary: #676778,
+	$secondary: #fff,
 	$surface: #fff,
 	$background: #fff,
 	$error: color-palette.$red-900
@@ -34,4 +34,9 @@ a:visited {
 
 p {
 	font-family: GT Alpina;
+}
+
+:root {
+	--mdc-theme-primary: #ff3e00;
+	--mdc-theme-secondary: #fff;
 }
