--- a/src/theme/_smui-theme.scss
+++ b/src/theme/_smui-theme.scss
@@ -33,8 +33,9 @@ a:visited {
 }
 
 p {
-	font-family: GT Alpina;
-	font-size: 30px;
+	font-family: 'Alegreya', serif;
+	font-size: 24px;
+	line-height: 40px;
 }
 
 :root {
