--- a/src/theme/_smui-theme.scss
+++ b/src/theme/_smui-theme.scss
@@ -34,8 +34,12 @@ a:visited {
 
 p {
 	font-family: 'Alegreya', serif;
-	font-size: 24px;
+	font-size: 30px;
 	line-height: 40px;
+}
+
+.mdc-text-field__input {
+	font-family: 'Roboto Mono', monospace !important;
 }
 
 :root {
