some more spacing updates

--- a/src/theme/_smui-theme.scss
+++ b/src/theme/_smui-theme.scss
@@ -42,6 +42,22 @@ p {
 	font-family: 'Roboto Mono', monospace !important;
 }
 
+.mdc-floating-label {
+	font-family: 'Roboto Mono', monospace !important;
+}
+
+.mdc-text-field-helper-text {
+	font-family: 'Roboto Mono', monospace !important;
+}
+
+.mdc-button__label {
+	font-family: 'Roboto Mono', monospace !important;
+}
+
+.fd {
+	font-family: 'Catamaran', sans-serif !important;
+}
+
 :root {
 	--mdc-theme-primary: black;
 	--mdc-theme-secondary: #fff;
