Get menu buttons to not uppercase!

--- a/src/theme/_smui-theme.scss
+++ b/src/theme/_smui-theme.scss
@@ -54,6 +54,11 @@ p {
 	font-family: 'Roboto Mono', monospace !important;
 }
 
+.mdc-button {
+	text-transform: none !important;
+	font-family: 'Catamaran', sans-serif !important;
+}
+
 .fd {
 	font-family: 'Catamaran', sans-serif !important;
 }
