add favicon stuff

--- a/src/theme/_smui-theme.scss
+++ b/src/theme/_smui-theme.scss
@@ -81,6 +81,10 @@ p {
 		line-height: 30px;
 	}
 
+	.mdc-button {
+		font-size: 16px;
+	}
+
 	.small-header {
 		font-size: 16px;
 		margin-top: 20px;
