--- a/src/theme/_smui-theme.scss
+++ b/src/theme/_smui-theme.scss
@@ -25,6 +25,38 @@ body {
 	letter-spacing: 0.01em;
 }
 
+h1 {
+	font-family: 'Catamaran', sans-serif;
+	font-weight: bold;
+	font-size: 80px;
+}
+
+h2 {
+	font-family: 'Catamaran', sans-serif;
+	font-size: 60px;
+}
+
+h3 {
+	font-family: 'Catamaran', sans-serif;
+	font-size: 40px;
+}
+
+h4 {
+	font-family: 'Catamaran', sans-serif;
+	font-size: 30px;
+}
+
+h5 {
+	font-family: 'Catamaran', sans-serif;
+	font-size: 24px;
+}
+
+h6 {
+	font-family: 'Catamaran', sans-serif;
+	font-size: 20px;
+}
+
+
 .small-header {
 	margin-top: 60px;
 	margin-bottom: 60px;
@@ -136,5 +168,29 @@ p {
 	
 	.mdc-select__selected-text {
 		font-size: 11px !important;
+	}
+
+	h1 {
+		font-size: 50px;
+	}
+	
+	h2 {
+		font-size: 40px;
+	}
+	
+	h3 {
+		font-size: 30px;
+	}
+	
+	h4 {
+		font-size: 24px;
+	}
+	
+	h5 {
+		font-size: 20px;
+	}
+	
+	h6 {
+		font-size: 20px;
 	}
 }
