--- a/src/theme/_smui-theme.scss
+++ b/src/theme/_smui-theme.scss
@@ -71,7 +71,7 @@ a:visited {
 	color: color.scale(#40b3ff, $lightness: -35%);
 }
 
-p {
+p, li {
 	font-family: 'Alegreya', serif;
 	font-size: 30px;
 	line-height: 40px;
@@ -143,7 +143,7 @@ p {
 }
 
 @media screen and (max-width: 661px) {
-	p {
+	p, li {
 		font-size: 20px;
 		line-height: 30px;
 	}
